tests/ui/layout/ice-non-last-unsized-field-issue-121473.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/ice-non-last-unsized-field-issue-121473.rs:10:17
   |
LL |     pub field2: str, // Unsized field that is not the last field
   |                 ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: only the last field of a struct may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: borrowed types always have a statically known size
   |
LL |     pub field2: &str, // Unsized field that is not the last field
   |                 +
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     pub field2: Box<str>, // Unsized field that is not the last field
   |                 ++++   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
